app/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> code
Rule 2     program -> <empty>
Rule 3     code -> code statement
Rule 4     code -> statement
Rule 5     statement -> declaration
Rule 6     statement -> assignment
Rule 7     statement -> prt
Rule 8     statement -> directives
Rule 9     statement -> ifst
Rule 10    directives -> NS DIRECTIVES LIBRARIES
Rule 11    declaration -> TYPE IDENTIFIER SEMIC
Rule 12    declaration -> TYPE IDENTIFIER EQUALS expression SEMIC
Rule 13    assignment -> IDENTIFIER EQUALS expression SEMIC
Rule 14    prt -> PRINT LPAREN expression RPAREN SEMIC
Rule 15    ifst -> IF LPAREN valbool RPAREN OCURLB program CCURLB
Rule 16    ifst -> IF LPAREN valbool RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB
Rule 17    expression -> expression PLUS term
Rule 18    expression -> expression MINUS term
Rule 19    term -> term TIMES factor
Rule 20    term -> term DIVIDE factor
Rule 21    factor -> EXP LPAREN factor value RPAREN
Rule 22    factor -> SQR LPAREN factor RPAREN
Rule 23    value -> NUMBER
Rule 24    valbool -> VAL_BOOL
Rule 25    valbool -> LPAREN valbool RPAREN
Rule 26    valbool -> expression OP_BOOL expression
Rule 27    expression -> term
Rule 28    term -> factor
Rule 29    factor -> value
Rule 30    factor -> IDENTIFIER
Rule 31    factor -> LPAREN expression RPAREN
Rule 32    factor -> MINUS factor

Terminals, with rules where they appear

CCURLB               : 15 16 16
DIRECTIVES           : 10
DIVIDE               : 20
ELSE                 : 16
EQUALS               : 12 13
EXP                  : 21
IDENTIFIER           : 11 12 13 30
IF                   : 15 16
LIBRARIES            : 10
LPAREN               : 14 15 16 21 22 25 31
MINUS                : 18 32
NS                   : 10
NUMBER               : 23
OCURLB               : 15 16 16
OP_BOOL              : 26
PLUS                 : 17
PRINT                : 14
RPAREN               : 14 15 16 21 22 25 31
SEMIC                : 11 12 13 14
SQR                  : 22
TIMES                : 19
TYPE                 : 11 12
VAL_BOOL             : 24
error                : 

Nonterminals, with rules where they appear

assignment           : 6
code                 : 1 3
declaration          : 5
directives           : 8
expression           : 12 13 14 17 18 26 26 31
factor               : 19 20 21 22 28 32
ifst                 : 9
program              : 15 16 16 0
prt                  : 7
statement            : 3 4
term                 : 17 18 19 20 27
valbool              : 15 16 25
value                : 21 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . code
    (2) program -> .
    (3) code -> . code statement
    (4) code -> . statement
    (5) statement -> . declaration
    (6) statement -> . assignment
    (7) statement -> . prt
    (8) statement -> . directives
    (9) statement -> . ifst
    (11) declaration -> . TYPE IDENTIFIER SEMIC
    (12) declaration -> . TYPE IDENTIFIER EQUALS expression SEMIC
    (13) assignment -> . IDENTIFIER EQUALS expression SEMIC
    (14) prt -> . PRINT LPAREN expression RPAREN SEMIC
    (10) directives -> . NS DIRECTIVES LIBRARIES
    (15) ifst -> . IF LPAREN valbool RPAREN OCURLB program CCURLB
    (16) ifst -> . IF LPAREN valbool RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB

    $end            reduce using rule 2 (program -> .)
    TYPE            shift and go to state 9
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 11
    NS              shift and go to state 12
    IF              shift and go to state 13

    program                        shift and go to state 1
    code                           shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    prt                            shift and go to state 6
    directives                     shift and go to state 7
    ifst                           shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> code .
    (3) code -> code . statement
    (5) statement -> . declaration
    (6) statement -> . assignment
    (7) statement -> . prt
    (8) statement -> . directives
    (9) statement -> . ifst
    (11) declaration -> . TYPE IDENTIFIER SEMIC
    (12) declaration -> . TYPE IDENTIFIER EQUALS expression SEMIC
    (13) assignment -> . IDENTIFIER EQUALS expression SEMIC
    (14) prt -> . PRINT LPAREN expression RPAREN SEMIC
    (10) directives -> . NS DIRECTIVES LIBRARIES
    (15) ifst -> . IF LPAREN valbool RPAREN OCURLB program CCURLB
    (16) ifst -> . IF LPAREN valbool RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB

    $end            reduce using rule 1 (program -> code .)
    CCURLB          reduce using rule 1 (program -> code .)
    TYPE            shift and go to state 9
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 11
    NS              shift and go to state 12
    IF              shift and go to state 13

    statement                      shift and go to state 14
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    prt                            shift and go to state 6
    directives                     shift and go to state 7
    ifst                           shift and go to state 8

state 3

    (4) code -> statement .

    TYPE            reduce using rule 4 (code -> statement .)
    IDENTIFIER      reduce using rule 4 (code -> statement .)
    PRINT           reduce using rule 4 (code -> statement .)
    NS              reduce using rule 4 (code -> statement .)
    IF              reduce using rule 4 (code -> statement .)
    $end            reduce using rule 4 (code -> statement .)
    CCURLB          reduce using rule 4 (code -> statement .)


state 4

    (5) statement -> declaration .

    TYPE            reduce using rule 5 (statement -> declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> declaration .)
    PRINT           reduce using rule 5 (statement -> declaration .)
    NS              reduce using rule 5 (statement -> declaration .)
    IF              reduce using rule 5 (statement -> declaration .)
    $end            reduce using rule 5 (statement -> declaration .)
    CCURLB          reduce using rule 5 (statement -> declaration .)


state 5

    (6) statement -> assignment .

    TYPE            reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    PRINT           reduce using rule 6 (statement -> assignment .)
    NS              reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    CCURLB          reduce using rule 6 (statement -> assignment .)


state 6

    (7) statement -> prt .

    TYPE            reduce using rule 7 (statement -> prt .)
    IDENTIFIER      reduce using rule 7 (statement -> prt .)
    PRINT           reduce using rule 7 (statement -> prt .)
    NS              reduce using rule 7 (statement -> prt .)
    IF              reduce using rule 7 (statement -> prt .)
    $end            reduce using rule 7 (statement -> prt .)
    CCURLB          reduce using rule 7 (statement -> prt .)


state 7

    (8) statement -> directives .

    TYPE            reduce using rule 8 (statement -> directives .)
    IDENTIFIER      reduce using rule 8 (statement -> directives .)
    PRINT           reduce using rule 8 (statement -> directives .)
    NS              reduce using rule 8 (statement -> directives .)
    IF              reduce using rule 8 (statement -> directives .)
    $end            reduce using rule 8 (statement -> directives .)
    CCURLB          reduce using rule 8 (statement -> directives .)


state 8

    (9) statement -> ifst .

    TYPE            reduce using rule 9 (statement -> ifst .)
    IDENTIFIER      reduce using rule 9 (statement -> ifst .)
    PRINT           reduce using rule 9 (statement -> ifst .)
    NS              reduce using rule 9 (statement -> ifst .)
    IF              reduce using rule 9 (statement -> ifst .)
    $end            reduce using rule 9 (statement -> ifst .)
    CCURLB          reduce using rule 9 (statement -> ifst .)


state 9

    (11) declaration -> TYPE . IDENTIFIER SEMIC
    (12) declaration -> TYPE . IDENTIFIER EQUALS expression SEMIC

    IDENTIFIER      shift and go to state 15


state 10

    (13) assignment -> IDENTIFIER . EQUALS expression SEMIC

    EQUALS          shift and go to state 16


state 11

    (14) prt -> PRINT . LPAREN expression RPAREN SEMIC

    LPAREN          shift and go to state 17


state 12

    (10) directives -> NS . DIRECTIVES LIBRARIES

    DIRECTIVES      shift and go to state 18


state 13

    (15) ifst -> IF . LPAREN valbool RPAREN OCURLB program CCURLB
    (16) ifst -> IF . LPAREN valbool RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB

    LPAREN          shift and go to state 19


state 14

    (3) code -> code statement .

    TYPE            reduce using rule 3 (code -> code statement .)
    IDENTIFIER      reduce using rule 3 (code -> code statement .)
    PRINT           reduce using rule 3 (code -> code statement .)
    NS              reduce using rule 3 (code -> code statement .)
    IF              reduce using rule 3 (code -> code statement .)
    $end            reduce using rule 3 (code -> code statement .)
    CCURLB          reduce using rule 3 (code -> code statement .)


state 15

    (11) declaration -> TYPE IDENTIFIER . SEMIC
    (12) declaration -> TYPE IDENTIFIER . EQUALS expression SEMIC

    SEMIC           shift and go to state 20
    EQUALS          shift and go to state 21


state 16

    (13) assignment -> IDENTIFIER EQUALS . expression SEMIC
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    LPAREN          shift and go to state 28
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    expression                     shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 17

    (14) prt -> PRINT LPAREN . expression RPAREN SEMIC
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    LPAREN          shift and go to state 28
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    expression                     shift and go to state 32
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 18

    (10) directives -> NS DIRECTIVES . LIBRARIES

    LIBRARIES       shift and go to state 33


state 19

    (15) ifst -> IF LPAREN . valbool RPAREN OCURLB program CCURLB
    (16) ifst -> IF LPAREN . valbool RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB
    (24) valbool -> . VAL_BOOL
    (25) valbool -> . LPAREN valbool RPAREN
    (26) valbool -> . expression OP_BOOL expression
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    VAL_BOOL        shift and go to state 36
    LPAREN          shift and go to state 34
    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    valbool                        shift and go to state 35
    expression                     shift and go to state 37
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 20

    (11) declaration -> TYPE IDENTIFIER SEMIC .

    TYPE            reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    IDENTIFIER      reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    PRINT           reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    NS              reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    IF              reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    $end            reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)
    CCURLB          reduce using rule 11 (declaration -> TYPE IDENTIFIER SEMIC .)


state 21

    (12) declaration -> TYPE IDENTIFIER EQUALS . expression SEMIC
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    LPAREN          shift and go to state 28
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    expression                     shift and go to state 38
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 22

    (30) factor -> IDENTIFIER .

    TIMES           reduce using rule 30 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 30 (factor -> IDENTIFIER .)
    SEMIC           reduce using rule 30 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 30 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 30 (factor -> IDENTIFIER .)
    RPAREN          reduce using rule 30 (factor -> IDENTIFIER .)
    OP_BOOL         reduce using rule 30 (factor -> IDENTIFIER .)
    NUMBER          reduce using rule 30 (factor -> IDENTIFIER .)


state 23

    (13) assignment -> IDENTIFIER EQUALS expression . SEMIC
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term

    SEMIC           shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 24

    (27) expression -> term .
    (19) term -> term . TIMES factor
    (20) term -> term . DIVIDE factor

    SEMIC           reduce using rule 27 (expression -> term .)
    PLUS            reduce using rule 27 (expression -> term .)
    MINUS           reduce using rule 27 (expression -> term .)
    RPAREN          reduce using rule 27 (expression -> term .)
    OP_BOOL         reduce using rule 27 (expression -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43


state 25

    (32) factor -> MINUS . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    LPAREN          shift and go to state 28
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    factor                         shift and go to state 44
    value                          shift and go to state 29

state 26

    (28) term -> factor .

    TIMES           reduce using rule 28 (term -> factor .)
    DIVIDE          reduce using rule 28 (term -> factor .)
    SEMIC           reduce using rule 28 (term -> factor .)
    PLUS            reduce using rule 28 (term -> factor .)
    MINUS           reduce using rule 28 (term -> factor .)
    RPAREN          reduce using rule 28 (term -> factor .)
    OP_BOOL         reduce using rule 28 (term -> factor .)


state 27

    (21) factor -> EXP . LPAREN factor value RPAREN

    LPAREN          shift and go to state 45


state 28

    (31) factor -> LPAREN . expression RPAREN
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    LPAREN          shift and go to state 28
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    expression                     shift and go to state 46
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 29

    (29) factor -> value .

    TIMES           reduce using rule 29 (factor -> value .)
    DIVIDE          reduce using rule 29 (factor -> value .)
    SEMIC           reduce using rule 29 (factor -> value .)
    PLUS            reduce using rule 29 (factor -> value .)
    MINUS           reduce using rule 29 (factor -> value .)
    RPAREN          reduce using rule 29 (factor -> value .)
    OP_BOOL         reduce using rule 29 (factor -> value .)
    NUMBER          reduce using rule 29 (factor -> value .)


state 30

    (22) factor -> SQR . LPAREN factor RPAREN

    LPAREN          shift and go to state 47


state 31

    (23) value -> NUMBER .

    TIMES           reduce using rule 23 (value -> NUMBER .)
    DIVIDE          reduce using rule 23 (value -> NUMBER .)
    SEMIC           reduce using rule 23 (value -> NUMBER .)
    PLUS            reduce using rule 23 (value -> NUMBER .)
    MINUS           reduce using rule 23 (value -> NUMBER .)
    RPAREN          reduce using rule 23 (value -> NUMBER .)
    OP_BOOL         reduce using rule 23 (value -> NUMBER .)
    NUMBER          reduce using rule 23 (value -> NUMBER .)


state 32

    (14) prt -> PRINT LPAREN expression . RPAREN SEMIC
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term

    RPAREN          shift and go to state 48
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 33

    (10) directives -> NS DIRECTIVES LIBRARIES .

    TYPE            reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    IDENTIFIER      reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    PRINT           reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    NS              reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    IF              reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    $end            reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)
    CCURLB          reduce using rule 10 (directives -> NS DIRECTIVES LIBRARIES .)


state 34

    (25) valbool -> LPAREN . valbool RPAREN
    (31) factor -> LPAREN . expression RPAREN
    (24) valbool -> . VAL_BOOL
    (25) valbool -> . LPAREN valbool RPAREN
    (26) valbool -> . expression OP_BOOL expression
    (17) expression -> . expression PLUS term
    (18) expression -> . expression MINUS term
    (27) expression -> . term
    (19) term -> . term TIMES factor
    (20) term -> . term DIVIDE factor
    (28) term -> . factor
    (21) factor -> . EXP LPAREN factor value RPAREN
    (22) factor -> . SQR LPAREN factor RPAREN
    (29) factor -> . value
    (30) factor -> . IDENTIFIER
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . MINUS factor
    (23) value -> . NUMBER

    VAL_BOOL        shift and go to state 36
    LPAREN          shift and go to state 34
    EXP             shift and go to state 27
    SQR             shift and go to state 30
    IDENTIFIER      shift and go to state 22
    MINUS           shift and go to state 25
    NUMBER          shift and go to state 31

    valbool                        shift and go to state 49
    expression                     shift and go to state 50
    term                           shift and go to state 24
    factor                         shift and go to state 26
    value                          shift and go to state 29

state 35

    (15) ifst -> IF LPAREN valbool . RPAREN OCURLB program CCURLB
    (16) ifst -> IF LPAREN valbool . RPAREN OCURLB program CCURLB ELSE OCURLB program CCURLB

    RPAREN          shift and go to state 51


state 36

    (24) valbool -> VAL_BOOL .

    RPAREN          reduce using rule 24 (valbool -> VAL_BOOL .)


state 37

    (26) valbool -> expression . OP_BOOL expression
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term

    OP_BOOL         shift and go to state 52
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 38

    (12) declaration -> TYPE IDENTIFIER EQUALS expression . SEMIC
    (17) expression -> expression . PLUS term
    (18) expression -> expression . MINUS term

    SEMIC           shift and go to state 53
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 39

    (13) assignment -> IDENTIFIER EQUALS expression SEMIC .

    TYPE            reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    IDENTIFIER      reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    PRINT           reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    NS              reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    IF              reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    $end            reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)
    CCURLB          reduce using rule 13 (assignment -> IDENTIFIER EQUALS expression SEMIC .)


state 40
